--- a/142/142.md
+++ b/142/142.md
@@ -1,3 +1,4 @@
+フロイドの循環検出法を使った解法
 ```C++
 /**
  * Definition for singly-linked list.
@@ -24,6 +25,30 @@ public:
             slow = slow->next;
         }
         return slow;
+    }
+};
+```
+
+setを使った解法
+```C++
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     ListNode *next;
+ *     ListNode(int x) : val(x), next(NULL) {}
+ * };
+ */
+class Solution {
+public:
+    ListNode *detectCycle(ListNode *head) {
+        set<ListNode*> visited;
+        while (head) {
+            visited.insert(head);
+            head = head->next;
+            if (visited.find(head) != visited.end()) return head;
+        }
+        return nullptr;
     }
 };
 ```
